# clawtrace

./: .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml
engine/: SKILL.md  __init__.py  __main__.py  aggregator.py  anomaly.py  cli.py  config.json  config.vps.json  dashboard.html  db.py  landing.html  parser.py  pricing.py  server.py
engine/tests/: conftest.py  test_aggregator.py  test_alerts.py  test_anomaly.py  test_hosted.py  test_install.py  test_parser.py  test_pricing.py  test_server.py
install/: install.sh  uninstall.sh
skill/: SKILL.md  sender.py  test_sender.py
web/functions/api/: signup.ts
